tested model with normalized data

--- a/Smoke_Detection_With_Normalization.ipynb
+++ b/Smoke_Detection_With_Normalization.ipynb
@@ -57,7 +57,7 @@
           "height": 74
         },
         "id": "fU9mJYshelf0",
-        "outputId": "8be49203-070b-455a-c367-28fa7b76281c"
+        "outputId": "a0070faf-2a7a-423a-ef0a-57e5c1d0857c"
       },
       "execution_count": 2,
       "outputs": [
@@ -69,9 +69,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-26b5ff7e-c4b0-40ed-ac6c-4c52e78d2810\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-cc9141b9-6194-4dbb-9a51-d6e1c91ab321\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-26b5ff7e-c4b0-40ed-ac6c-4c52e78d2810\">\n",
+              "     <output id=\"result-cc9141b9-6194-4dbb-9a51-d6e1c91ab321\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -120,7 +120,7 @@
           "height": 268
         },
         "id": "YJRLs0eYfKgB",
-        "outputId": "2e9a46a0-7bf4-4de0-f86d-4dfe6d71a20c"
+        "outputId": "2a88ee4e-5d89-44bd-81e2-ece75787d75b"
       },
       "execution_count": 4,
       "outputs": [
@@ -151,7 +151,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6dac43bd-d450-4809-8309-f9de2eef3262\">\n",
+              "  <div id=\"df-8b2ed5ad-0f6f-4c0a-b1aa-eac72bbd8644\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -288,7 +288,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6dac43bd-d450-4809-8309-f9de2eef3262')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8b2ed5ad-0f6f-4c0a-b1aa-eac72bbd8644')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -339,12 +339,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6dac43bd-d450-4809-8309-f9de2eef3262 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8b2ed5ad-0f6f-4c0a-b1aa-eac72bbd8644 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6dac43bd-d450-4809-8309-f9de2eef3262');\n",
+              "          const element = document.querySelector('#df-8b2ed5ad-0f6f-4c0a-b1aa-eac72bbd8644');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -384,9 +384,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "9d3875d6-bc82-45da-9246-d7c266efcaa1"
+        "outputId": "fa39fcbd-9f87-4431-8a6e-c6f047832a4a"
       },
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +408,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c16bf267-b400-4599-8afc-8f877db0c0d1\">\n",
+              "  <div id=\"df-9a6a3991-ef32-4b92-90c5-2b87db113353\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -527,7 +527,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c16bf267-b400-4599-8afc-8f877db0c0d1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a6a3991-ef32-4b92-90c5-2b87db113353')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -578,12 +578,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c16bf267-b400-4599-8afc-8f877db0c0d1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9a6a3991-ef32-4b92-90c5-2b87db113353 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c16bf267-b400-4599-8afc-8f877db0c0d1');\n",
+              "          const element = document.querySelector('#df-9a6a3991-ef32-4b92-90c5-2b87db113353');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -606,20 +606,78 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "X = X.values"
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "data_scaler = StandardScaler()\n",
+        "\n",
+        "X = data_scaler.fit_transform(X)\n",
+        "\n",
+        "X"
       ],
       "metadata": {
-        "id": "OMscpafdfuF7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KPJ8t63DgIca",
+        "outputId": "53e52709-81b7-4186-97c6-3f74342e5ef7"
       },
-      "execution_count": 17,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.28062169,  0.99494707, -0.24861434, ..., -0.09192422,\n",
+              "        -0.07388861, -1.38347572],\n",
+              "       [ 0.2816663 ,  0.91711549, -0.24861434, ..., -0.09192422,\n",
+              "        -0.07388861, -1.38334411],\n",
+              "       [ 0.28264127,  0.83702792, -0.24861434, ..., -0.09192422,\n",
+              "        -0.07388861, -1.38321249],\n",
+              "       ...,\n",
+              "       [ 0.20171901, -3.68848353, -0.16834834, ..., -0.09164563,\n",
+              "        -0.07387569, -0.62786328],\n",
+              "       [ 0.21676136, -3.66592365, -0.16694016, ..., -0.09164834,\n",
+              "        -0.07387569, -0.62773167],\n",
+              "       [ 0.23180371, -3.61177995, -0.16630008, ..., -0.09165014,\n",
+              "        -0.07387569, -0.62760005]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(np.mean(X[:,0]))\n",
+        "print(np.std(X[:,0]))"
+      ],
+      "metadata": {
+        "id": "OMscpafdfuF7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c9c6fd6-8a6d-4de8-fbb8-88ead4a56e30"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-5.808684028567321e-17\n",
+            "1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -629,7 +687,7 @@
       "metadata": {
         "id": "nJNcdPnafu5K"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -640,7 +698,7 @@
       "metadata": {
         "id": "_jEhlIh1f6Wd"
       },
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -656,9 +714,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XeijJee-gMUl",
-        "outputId": "d18f11cd-208a-4068-af87-75eac6e89f05"
+        "outputId": "165018b3-0284-4cda-826e-7122c43d570c"
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -684,7 +742,7 @@
       "metadata": {
         "id": "wqeCNCkugUEU"
       },
-      "execution_count": 22,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -697,19 +755,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XJVQGqmkhYxD",
-        "outputId": "448aab17-4743-46e3-b1de-6276e1cc1740"
+        "outputId": "da4146da-4014-46eb-8f4f-6e92fadbbcd6"
       },
-      "execution_count": 23,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1, 0, 1, ..., 1, 0, 1])"
+              "array([1, 1, 0, ..., 1, 1, 0])"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 14
         }
       ]
     },
@@ -723,19 +781,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qqTAmuPQlCyo",
-        "outputId": "c990e883-0e19-4f07-b862-c1a0c39d0ed3"
+        "outputId": "e614ef3e-67c4-458b-b94f-7609df50512a"
       },
-      "execution_count": 24,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1, 0, 1, ..., 1, 0, 1])"
+              "array([1, 1, 0, ..., 1, 1, 0])"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 15
         }
       ]
     },
@@ -751,20 +809,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cgMPzKIHhcGj",
-        "outputId": "807a73f4-b67c-4c32-f3d0-d14a5cb8c2e7"
+        "outputId": "70c6d745-cada-42f2-8382-5145605c7a5e"
       },
-      "execution_count": 25,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 4455,    13],\n",
-              "       [  141, 11049]])"
+              "array([[ 4407,    61],\n",
+              "       [   69, 11121]])"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 16
         }
       ]
     },
@@ -782,9 +840,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eh1SC_iahhMY",
-        "outputId": "c57c5d1c-0865-48fd-e69a-81dd76a7cfc2"
+        "outputId": "251d10ac-0734-4fd0-debd-e3087bf406c1"
       },
-      "execution_count": 26,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,11 +850,11 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "     no fire       0.97      1.00      0.98      4468\n",
-            "        fire       1.00      0.99      0.99     11190\n",
+            "     no fire       0.98      0.99      0.99      4468\n",
+            "        fire       0.99      0.99      0.99     11190\n",
             "\n",
             "    accuracy                           0.99     15658\n",
-            "   macro avg       0.98      0.99      0.99     15658\n",
+            "   macro avg       0.99      0.99      0.99     15658\n",
             "weighted avg       0.99      0.99      0.99     15658\n",
             "\n"
           ]
@@ -814,15 +872,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J7lY6CWhiqO9",
-        "outputId": "3c901c33-8849-4317-cb07-6e9f2a9d42d4"
+        "outputId": "25ee4ad2-beed-48ca-97f9-a75f9497a20c"
       },
-      "execution_count": 27,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.9901647720015327\n"
+            "0.9916975348064887\n"
           ]
         }
       ]
